<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_fragment"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.main.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        app:elevation="0dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MyGithub.AppBarOverlay">

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="Search User"
            android:background="@drawable/bg_search_view"
            android:theme="@style/SearchView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/content_error"
                layout="@layout/content_error"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:visibility="gone"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

            <include
                android:id="@+id/shimmer_frame_user"
                layout="@layout/shimmer_content_user"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/search_anim"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:scaleType="fitCenter"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/search"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <include
                android:id="@+id/content_empty"
                layout="@layout/content_empty"
                android:visibility="gone"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/item_user"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>